--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "precompile-intl-runtime",
-  "version": "0.8.5",
+  "name": "@fullstax/precompile-intl-runtime",
+  "version": "0.8.5-fullstax.1",
   "description": "Runtime helpers to be used in translations precompiled by babel-plugin-precompile-intl",
-  "repository": "https://github.com/cibernox/precompile-intl-runtime",
+  "repository": "https://github.com/fllstx/precompile-intl-runtime",
   "author": {
     "name": "Miguel Camba",
     "email": "miguel.camba@gmail.com"
